[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Analyzer.gd" type="Script" id=2]
[ext_resource path="res://UI/Output.gd" type="Script" id=3]
[ext_resource path="res://UI/TextEdit.gd" type="Script" id=4]
[ext_resource path="res://Player/PlayerController.gd" type="Script" id=5]
[ext_resource path="res://Game.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/LevelSelection.tscn" type="PackedScene" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Label

onready var timer = $Timer

const update_frequency := 0.3

func _ready() -> void:
	timer.start(update_frequency)


func _process(delta: float) -> void:
	if timer.is_stopped():
		timer.start(update_frequency)


func _on_Timer_timeout() -> void:
	text = String(Performance.get_monitor(Performance.TIME_FPS))
"

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
smoothing_enabled = true

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="UI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="UI"]
margin_left = 338.984
margin_top = 42.0
margin_right = 426.984
margin_bottom = 298.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Analyze" type="Button" parent="UI/Buttons"]
margin_right = 88.0
margin_bottom = 20.0
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="UI/Buttons"]
margin_top = 40.0
margin_right = 88.0
margin_bottom = 60.0
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="UI/Buttons"]
margin_top = 80.0
margin_right = 88.0
margin_bottom = 100.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/Buttons"]
margin_top = 120.0
margin_right = 88.0
margin_bottom = 140.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="UI/Buttons"]
margin_top = 160.0
margin_right = 88.0
margin_bottom = 180.0
text = "Back"

[node name="TextEdit" type="TextEdit" parent="UI"]
margin_left = 74.0
margin_top = 42.0
margin_right = 305.0
margin_bottom = 462.0
text = "EXAMPLE CODE
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = true
wrap_enabled = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
margin_left = 74.0
margin_top = 495.0
margin_right = 1205.0
margin_bottom = 680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="UI/Panel"]
margin_right = 1131.0
margin_bottom = 185.0
scroll_following = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="UI"]
margin_left = 338.984
margin_top = 344.828
margin_right = 398.984
margin_bottom = 374.828
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="UI"]
margin_left = 452.0
margin_top = 17.0
margin_right = 512.0
margin_bottom = 37.0
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/FPS"]

[node name="Analyzer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Analyzer"]

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
margin_left = 452.0
margin_top = 42.0
margin_right = 1172.0
margin_bottom = 462.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 452.0
margin_top = 42.0
margin_right = 1172.0
margin_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true
stretch_shrink = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 360, 210 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="Game" parent="ViewportContainer/Viewport" instance=ExtResource( 6 )]
pause_mode = 1

[node name="LevelSelection" parent="." instance=ExtResource( 7 )]
margin_top = -720.0
margin_right = 1280.0
[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
[connection signal="pressed" from="UI/Buttons/Analyze" to="Analyzer" method="_on_Analyze_pressed"]
[connection signal="pressed" from="UI/Buttons/Stop" to="Analyzer" method="_on_Stop_pressed"]
[connection signal="pressed" from="UI/Buttons/Reset" to="ViewportContainer/Viewport/Game" method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/Buttons/Reset" to="Analyzer" method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/Buttons/Reset" to="UI/TextEdit" method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="UI/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Clear" to="UI/Panel/Output" method="_on_Clear_pressed"]
[connection signal="timeout" from="UI/FPS/Timer" to="UI/FPS" method="_on_Timer_timeout"]
